# retrival-evaluation

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
notebooks/: eda_casper.ipynb
src/exjobb_rag/: data_loader.py  embeddings.py  evaluation.py  search.py
