[project]
name = "retrival-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "lancedb>=0.30.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
]
